Sort&Search&Filter Todos , Show Todos Number

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <section class="header__footer">
                 <div class="select">
                     <select name="filter-todos" class="filter-todos">
-                        <option value="all">All</option>
+                        <option value="all" selected="selected">All</option>
                         <option value="completed">Completed</option>
                         <option value="uncompeleted">UnCompeleted</option>
                     </select>
@@ -28,8 +28,8 @@
                 </div>
                 <div class="select">
                     <select name="sort-todos" class="sort-todos">
+                        <option value="oldest" selected="selected">Oldest</option>
                         <option value="newest">Newest</option>
-                        <option value="oldest">Oldest</option>
                     </select>
                 </div>
             </section>
